--- a/videos/templates/index.html
+++ b/videos/templates/index.html
@@ -17,7 +17,7 @@
     <a href="{% url 'proj' p.id %}">
         <figure style="display:table-cell">
             <img width="300px" src="{{p.image}}"/>
-            <figcaption style="font-size:20px">{{p.titre}}</figcaption>
+            <figcaption>{{p.titre}}</figcaption>
         </figure>
     </a>
 	{% endfor %}
