--- a/videos/templates/base.html
+++ b/videos/templates/base.html
@@ -23,14 +23,14 @@
         {% endfor %}
 
     {% else %}
-        <a href="{% url 'login' %}">Se connecter</a>
+        <a href="{% url 'login' %}?next={% url 'index' %}">Se connecter</a>
     {% endif %}
 </div>
 
 <div id="central">
 	<div id="navigation_bar">"
     <ul>
-        <li><a href="/">Home</a></li>
+        <li><a href="{% url 'index' %}">Home</a></li>
         <li><a href="{% url 'categories' %}">Catégories</a></li>
         <li><a href="{% url 'projs' 1 %}">Projections</a></li>
         <li><a href="{% url 'videos' 1 %}">Vidéos</a></li>
