--- a/videos/templates/base.html
+++ b/videos/templates/base.html
@@ -16,9 +16,16 @@
         <a href="{% url 'logout' %}">Se déconnecter</a>
 
         <br/>
-        <h3>Favoris :</h3>
+        <h3>Vidéos :</h3>
         {% for f in request.user.favorite_set.all %}
         <a href="{% url 'video' f.video.id %}">{{ f.video.titre }}</a>
+        <br/>
+        {% endfor %}
+
+        <br/>
+        <h3>Projs :</h3>
+        {% for f in request.user.favorite_proj_set.all %}
+        <a href="{% url 'proj' f.proj.id %}">{{ f.proj.titre }}</a>
         <br/>
         {% endfor %}
 
