--- a/videos/templates/base.html
+++ b/videos/templates/base.html
@@ -5,6 +5,7 @@
 <head>
   <meta charset="utf-8"/>
   <link rel="stylesheet" href="{% static 'style.css' %}"/>
+  <link href='//fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
   <title>JTX</title>
 </head>
 <body>
@@ -49,7 +50,7 @@
 	</div>
 
 	<div id="body">
-    
+
     {% if titre_tag %}
         <span class="tag" style="font-size:30px">{{titre}}</span><br/><br/>
     {% else %}
