--- a/videos/templates/videos.html
+++ b/videos/templates/videos.html
@@ -6,18 +6,24 @@
 {% load app_filters %}
 
 	{% for v in elements %}
-    <a href="{% url 'video' v.id %}">
+				<a href="{% url 'video' v.id %}">
         <figure style="display:table-cell">
-            <img src="{{v.url}}.png"/>
-            <figcaption style="font-size:15">
-                {{v.titre}}
-                <br/>
+
+            <img class="img_vid" src="{{v.url}}.png"/>
+
+						<figcaption class="legende_vid_duree">
                 {{v|duration}}
-                <br/>
-                {{v|auteurs}}
             </figcaption>
+
+						<figcaption class="legende_vid_titre">
+								{{v.titre}}
+						</figcaption>
+
+						<figcaption class="legende_vid_auteur">
+								{{v|auteurs}}
+						</figcaption>
         </figure>
-    </a>
+				</a>
 	{% endfor %}
 
 {% endif %}
