Added short filter

--- a/videos/templates/videos.html
+++ b/videos/templates/videos.html
@@ -16,7 +16,7 @@
             </figcaption>
 
 						<figcaption class="legende_vid_titre">
-								{{v.titre}}
+								{{v.titre|short}}
 						</figcaption>
 
 						<figcaption class="legende_vid_auteur">
