--- a/videos/templates/projs.html
+++ b/videos/templates/projs.html
@@ -3,11 +3,13 @@
 {% block body %}
 {% if elements %}
 
+{% load app_filters %}
+
 	{% for p in elements %}
     <a href="{% url 'proj' p.id %}", class="proj">
         <figure style="display:table-cell">
             <img class="proj_image" src="{{p.image}}"/>
-            <figcaption class="legende_proj">{{p.titre}}</figcaption>
+            <figcaption class="legende_proj">{{p.titre|short}}</figcaption>
         </figure>
     </a>
 	{% endfor %}
