--- a/videos/templates/index.html
+++ b/videos/templates/index.html
@@ -2,11 +2,13 @@
 
 {% block body %}
 
+{% load app_filters %}
+
 {% if categories %}
 <h1>Catégories</h1>
 	<ul>
 	{% for c in categories %}
-    <li><a href="{% url 'category' c.id 1 %}">{{ c.titre }}</a></li>
+    <li><a href="{% url 'category' c.id 1 %}">{{ c.titre|short }}</a></li>
 	{% endfor %}
 	</ul>
 {% endif %}
@@ -17,7 +19,7 @@
     <a href="{% url 'proj' p.id %}">
         <figure style="display:table-cell">
             <img class="proj_image" src="{{p.image}}"/>
-            <figcaption>{{p.titre}}</figcaption>
+            <figcaption>{{p.titre|short}}</figcaption>
         </figure>
     </a>
 	{% endfor %}
@@ -29,7 +31,7 @@
     <a href="{% url 'video' v.id %}">
         <figure style="display:table-cell">
             <img class="img_vid" src="{{v.url}}.png"/>
-            <figcaption class="legende_vid">{{v.titre}}</figcaption>
+            <figcaption class="legende_vid">{{v.titre|short}}</figcaption>
         </figure>
     </a>
 	{% endfor %}
