--- a/videos/static/style.css
+++ b/videos/static/style.css
@@ -11,6 +11,7 @@
     margin-top:-21px;
     text-align:center;
     position: fixed;
+    overflow: hidden;
 }
 
 #central {
@@ -163,4 +164,64 @@ a:hover{
 #body a {
     margin-left:5px;
     margin-right:5px;
+}
+
+
+/* Tout ce qui suit jusqu'au prochain bloc concerne le design du lecteur de vidéos*/
+.titre_et_vues{
+  background-color: #ffffff;
+  padding-left:10px;
+  box-shadow: 0px 0px 3px -1px;
+}
+
+.titre_et_vues_titre{
+  padding-top:6px;
+  font-size: 28px;
+}
+
+.titre_et_vues_date{
+  font-size: 12px;
+  margin-top: -25px;
+}
+
+hr {
+  display: block;
+  height: 1px;
+  border: 0;
+  border-top: 1px solid #E2E2E2;
+
+  margin-left: -2px;
+  padding: 0;
+  width: 880px;
+}
+
+.titre_et_vues_vues_et_jaime{
+  float: right;
+  margin-top: -60px;
+  margin-right: 10px;
+}
+
+.titre_et_vues_vues_et_jaime_vues{
+
+  color: #666666;
+  font-size: 20px;
+  text-align: right;
+}
+
+.titre_et_vues_vues_et_jaime_nb_jaime{
+  float:left;
+  padding: 2px;
+  text-align: right;
+  /*box-shadow: 0px 0px 3px -1px;*/
+  margin-bottom: 5px;
+
+}
+
+.titre_et_vues_vues_et_jaime_bouton_jaime{
+  float: right;
+  color:white;
+  padding: 2px;
+  text-align: center;
+  box-shadow: 0px 0px 3px -1px;
+
 }
