Purge du code css afin d'éviter les redondances. La lateral bar est maintenant completement au dessus du reste. A ameliorer

--- a/videos/templates/projs.html
+++ b/videos/templates/projs.html
@@ -4,15 +4,18 @@
 {% if elements %}
 
 {% load app_filters %}
-
+<div class="liste_proj">
 	{% for p in elements %}
-    <a href="{% url 'proj' p.id %}", class="proj">
+
+		<a href="{% url 'proj' p.id %}", class="proj">
         <figure style="display:table-cell">
             <img class="proj_image" src="{{p.image}}"/>
             <figcaption class="legende_proj">{{p.titre|short}}</figcaption>
         </figure>
     </a>
-	{% endfor %}
 
+
+	{% endfor %}
+</div>
 {% endif %}
 {% endblock %}
