--- a/videos/static/style.css
+++ b/videos/static/style.css
@@ -2,17 +2,6 @@
     font-family: Roboto;
 }
 
-#lateral_bar {
-    position: absolute;
-    top:0;
-    bottom:0;
-    width:250px;
-    background-color: #ffffff;
-    margin-top:-21px;
-    text-align:center;
-    position: fixed;
-    overflow: hidden;
-}
 
 #central {
     position: absolute;
@@ -28,38 +17,27 @@
     margin-top:30px;
 }
 
+#body a {
+    margin-left:5px;
+    margin-right:5px;
+}
 
 body {
-    padding: 0;
-    margin:0;
     background-color: #f1f1f1;
 }
 
-.tag {
-    font-family: 'roboto';
-    font-variant: small-caps;
-    font-size: 20px;
-    padding-top: 3px;
-    padding-bottom: 3px;
-    padding-left: 10px;
-    padding-right:10px;
-    background-color: yellow;
-}
 
-h1 {
-    color:#444444;
-    background-color:white;
-    text-align:center;
-    border-style: solid;
-    border-width: 1px;
-    border-color:#e8e8e8;
-}
 
-a {
-    text-decoration: none;
-}
 
-#navigation_bar ul {
+/*
+-----------------------------
+Style de la bar de navigation
+-----------------------------
+*/
+#navigation_bar{
+  margin-left: -8px;
+}
+  #navigation_bar ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -73,6 +51,8 @@ a {
     border-color:#e8e8e8;
     border-right-width:0px;
     border-left-width:0px;
+    height:48px;
+
 }
 
 #navigation_bar li {
@@ -95,8 +75,94 @@ a {
 }
 
 
+/*
+------------------------
+Style de la Lateral Bar
+-----------------------
+*/
+
+/* Pour le titre jtx*/
+#lateral_bar h1 {
+    margin-top: 21px;
+    height:40px;
+    color:#444444;
+    background-color:white;
+    text-align:center;
+    border-style: solid;
+    border-width: 1px;
+    border-color:#e8e8e8;
+}
+
+#lateral_bar {
+    border-style: solid;
+    border-width: 1px;
+    border-color:#e8e8e8;
+    position: absolute;
+    overflow: hidden;
+    top:0;
+    bottom: 0;
+    left:0;
+    width:250px;
+    background-color: #ffffff;
+    margin-top:-22px;
+    text-align:center;
+    position: fixed;
+
+}
+
+#lateral_bar h1{
+    font-style:bold;
+    padding-top:4px;
+    padding-bottom:4px;
+    color:#fdc500;
+    border-right-width:0px;
+    border-left-width:0px;
+}
+
+#lateral_bar a{
+    padding-top:5px;
+    padding-bottom:5px;
+}
 
 
+/*
+---------------
+Style des tags
+--------------
+*/
+
+.tag {
+    font-family: 'roboto';
+    font-variant: small-caps;
+    font-size: 20px;
+    padding-top: 3px;
+    padding-bottom: 3px;
+    padding-left: 10px;
+    padding-right:10px;
+    background-color: yellow;
+}
+
+/*
+--------------------------------------
+Style des listes de vidéos et de projs
+--------------------------------------
+*/
+
+.liste_proj a{
+  text-decoration: none;
+}
+
+.liste_proj a :hover{
+  opacity: 0.7;
+}
+
+.liste_videos a {
+  text-decoration: none;
+}
+
+.liste_videos a :hover{
+  opacity: 0.7;
+}
 
 /* Concerne l'affichage des images de template des projs que l'on impose à la taille 16/9 */
 .proj_image{
@@ -110,7 +176,11 @@ a {
   max-height: 113px;
 }
 
-/* Concerne l'affichage des légendes des vidéos */
+/*
+-------------------------------------------
+Concerne l'affichage des légendes des vidéos
+------------------------------------------
+ */
 .legende_vid_duree{
   margin-top: -23px;
   margin-right: 2px;
@@ -134,11 +204,14 @@ a {
   margin-bottom: 15px;
 }
 
-a:hover{
-  opacity: 0.7;
-}
 
-/* Concerne l'affichage des légendes des projs */
+
+/*
+---------------------------------------------
+Concerne l'affichage des légendes des projs
+---------------------------------------------
+*/
+
 .legende_proj{
   color:#167ac6;
   width: 200px;
@@ -147,27 +220,14 @@ a:hover{
   text-decoration: none;
 }
 
-#lateral_bar h1{
-    font-style:bold;
-    padding-top:4px;
-    padding-bottom:4px;
-    color:#fdc500;
-    border-right-width:0px;
-    border-left-width:0px;
-}
-
-#lateral_bar a{
-    padding-top:5px;
-    padding-bottom:5px;
-}
-
-#body a {
-    margin-left:5px;
-    margin-right:5px;
-}
 
 
-/* Tout ce qui suit jusqu'au prochain bloc concerne le design du lecteur de vidéos*/
+
+/*
+-------------------------------------------------------------------------------
+Tout ce qui suit jusqu'au prochain bloc concerne le design du lecteur de vidéos
+-------------------------------------------------------------------------------
+*/
 .titre_et_vues{
   background-color: #ffffff;
   padding-left:10px;
@@ -229,10 +289,6 @@ a:hover{
 }
 
 .titre_et_vues_haut_deuxieme_partie{
-
-}
-
-.titre_et_vues_haut_deuxieme_partie{
   margin-right: 10px;
 }
 
@@ -247,7 +303,7 @@ a:hover{
 .titre_et_vues_tags{
   font-size: 12px;
   color:#666666;
-padding-bottom: 5px;
+  padding-bottom: 5px;
 }
 
 .description_video{
@@ -302,7 +358,6 @@ padding-bottom: 5px;
   height: 50px;
 }
 
-
 textarea{
   width: 810px;
   height: auto;
@@ -316,8 +371,7 @@ textarea{
 }
 
 #bouton_comment{
-float: right;
-
+  float: right;
 }
 
 #commentaires_video_id hr{
@@ -328,3 +382,9 @@ float: right;
 
   margin-left: -2px;
   padding: 0;}
+
+/*
+----------------------------------------------
+Fin du design de l'interface de lecture vidéo
+----------------------------------------------
+*/
