--- a/videos/templates/base.html
+++ b/videos/templates/base.html
@@ -13,42 +13,66 @@
 
 <div id="central">
   <div id="lateral_bar">
-      <h1> JTX </h1>
-      {% if request.user.is_authenticated %}
-          Bonjour {{ request.user.username }}
-          <br/>
-          <a href="{% url 'logout' %}">Se déconnecter</a>
 
-          <br/>
+      {% if request.user.is_authenticated %}
+          <h3>Bonjour {{ request.user.username }}</h3>
+
+          <a class="lateral_bar_button_a" href="{% url 'logout' %}">
+            <div class="lateral_bar_button">
+                Se déconnecter
+            </div>
+          </a>
+
+          <hr>
+
           <h3>Vidéos :</h3>
           {% for f in request.user.favorite_set.all %}
-          <a href="{% url 'video' f.video.id %}">{{ f.video.titre }}</a>
-          <br/>
+          <a class="lateral_bar_button_a" href="{% url 'video' f.video.id %}">
+            <div class="lateral_bar_button">
+            {{ f.video.titre }}
+            </div>
+          </a>
+
           {% endfor %}
 
-          <br/>
+          <hr>
           <h3>Projs :</h3>
           {% for f in request.user.favorite_proj_set.all %}
-          <a href="{% url 'proj' f.proj.id %}">{{ f.proj.titre }}</a>
-          <br/>
+          <a class="lateral_bar_button_a" href="{% url 'proj' f.proj.id %}">
+              <div class="lateral_bar_button">
+                  {{ f.proj.titre }}
+              </div>
+          </a>
+
           {% endfor %}
 
       {% else %}
-          <a href="{% url 'login' %}?next={% url 'index' %}">Se connecter</a>
+        <a class="lateral_bar_button_a" href="{% url 'login' %}?next={% url 'index' %}">
+          <div class="lateral_bar_button">
+              Se connecter
+          </div>
+        </a>
+
       {% endif %}
   </div>
 
-	<div id="navigation_bar">"
-    <ul>
-        <li><a href="{% url 'index' %}">Home</a></li>
-        <li><a href="{% url 'categories' %}">Catégories</a></li>
-        <li><a href="{% url 'projs' 1 %}">Projections</a></li>
-        <li><a href="{% url 'videos' 1 %}">Vidéos</a></li>
-        {% if request.user.is_authenticated %}
-            <li><a href="{% url 'favorites' 1 %}">Favoris</a></li>
-        {% endif %}
-        <li><a href="{% url 'tags' %}">Tags</a></li>
-    </ul>
+	<div id="navigation_bar">
+    <div class="navigation_bar_titre">
+      <h1> JTX </h1>
+    </div>
+    <div class="navigation_bar_menu">
+      <ul>
+          <li><a href="{% url 'index' %}">Home</a></li>
+          <li><a href="{% url 'categories' %}">Catégories</a></li>
+          <li><a href="{% url 'projs' 1 %}">Projections</a></li>
+          <li><a href="{% url 'videos' 1 %}">Vidéos</a></li>
+          {% if request.user.is_authenticated %}
+              <li><a href="{% url 'favorites' 1 %}">Favoris</a></li>
+          {% endif %}
+          <li><a href="{% url 'tags' %}">Tags</a></li>
+      </ul>
+    </div>
+
 	</div>
 
 	<div id="body">
