--- a/videos/static/style.css
+++ b/videos/static/style.css
@@ -125,7 +125,7 @@ Style de la Lateral Bar
 }
 
 #lateral_bar{
-
+  font-size: 12px;
     border-style: solid;
     border-width: 1px;
     border-color:#e8e8e8;
@@ -151,13 +151,37 @@ Style de la Lateral Bar
 }
 
 #lateral_bar h1 {
-    font-style:bold;
+
     padding-top:4px;
     padding-bottom:4px;
     color:#fdc500;
     border-right-width:0px;
     border-left-width:0px;
 }
+
+#lateral_bar h3 {
+  color: #444444;
+  font-variant: small-caps;
+}
+
+.lateral_bar_supprimer{
+  background-color:  white;
+  color:#444444;
+  border-radius: 100px;
+  text-decoration: none;
+  padding-left: 3px;
+  padding-right: 3px;
+  border-width: 1px;
+  border-color: #444444;
+  border-style:solid;
+  font-size: 10px;
+}
+
+.lateral_bar_supprimer:hover{
+  background-color:  #444444;
+  color:white;
+}
+
 /*
 #lateral_bar a {
     padding-top:5px;
@@ -185,15 +209,15 @@ Style de la Lateral Bar
 }
 
 #lateral_bar hr {
-  display: block;
+  display: table;
+  margin: 0,auto;
   height: 1px;
   border: 0;
   border-top: 1px solid #E2E2E2;
 
-  margin-left: -2px;
   padding: 0;
   width:200px;
-  margin-left: 25px;
+
 }
 
 /*
@@ -343,13 +367,14 @@ Tout ce qui suit jusqu'au prochain bloc concerne le design du lecteur de vidéos
   margin-top: 5px;
   float:left;
   padding: 2px;
+  padding-right: 15px;
   text-align: right;
   /*box-shadow: 0px 0px 3px -1px;*/
   margin-bottom: 5px;
   font-size: 12px;
 }
 
-.titre_et_vues_vues_et_jaime_bouton_jaime{
+.titre_et_vues_vues_et_jaime_bouton_jaime_vert{
   margin-top: 5px;
   color:white;
   float:right;
@@ -357,6 +382,40 @@ Tout ce qui suit jusqu'au prochain bloc concerne le design du lecteur de vidéos
   text-align: center;
   box-shadow: 0px 0px 3px -1px;
   font-size: 12px;
+  border-radius: 6px;
+
+  border-style: solid;
+  border-width: 1px;
+  border-color: #50b649;
+  background-color: #50b649;
+}
+
+.lien_jaime_vert :hover{
+  background-color: white;
+  border-radius: 6px;
+  color : #50b649;
+}
+
+.titre_et_vues_vues_et_jaime_bouton_jaime_rouge{
+  margin-top: 5px;
+  color:white;
+  float:right;
+  padding: 2px;
+  text-align: center;
+  box-shadow: 0px 0px 3px -1px;
+  font-size: 12px;
+  border-radius: 6px;
+
+  border-style: solid;
+  border-width: 1px;
+  border-color: red;
+  background-color: red;
+}
+
+.lien_jaime_rouge :hover{
+  background-color: white;
+  border-radius: 6px;
+  color : red;
 }
 
 .titre_et_vues_haut_deuxieme_partie{
@@ -500,6 +559,7 @@ input[type=checkbox] {
   display: inline-block;*/
   background-color: #444444;
   color:white ;
+  border-radius: 6px;
 }
 /* Default State */
 .description_video_proj{
@@ -513,4 +573,41 @@ input[type=checkbox] {
 /* Toggled State */
 input[type=checkbox]:checked ~ .description_video_proj{
    height: 0px;
+}
+
+.description_video_proj ol li{
+padding-top: 5px;
+}
+
+.proj_video_voir{
+  border-radius: 6px;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #777777;
+  color: #777777;
+  box-shadow: 0px 0px 3px -1px;
+  text-decoration: none;
+  padding-left: 2px;
+  padding-right: 2px;
+}
+
+.proj_video_voir:hover{
+  background-color: #777777;
+  color:white;
+}
+
+
+.proj_video_titre{
+  text-decoration: none;
+  color:black;
+  font-weight: bold;
+  padding-left: 3px;
+  padding-right: 3px;
+  padding:3px;
+  color:#444444;
+}
+
+.proj_video_titre:hover{
+  background-color: #444444;
+  color:white;
 }
