--- a/videos/templates/video.html
+++ b/videos/templates/video.html
@@ -35,15 +35,15 @@
 
 			{% if request.user.is_authenticated %}
 			{% if favorite %}
-			    <a href="{% url 'remove_favorite' video_id=video.id home=0 %}">
-						<div class="titre_et_vues_vues_et_jaime_bouton_jaime" style="background-color: red;">
+			    <a href="{% url 'remove_favorite' video_id=video.id home=0 %}" class="lien_jaime_rouge">
+						<div class="titre_et_vues_vues_et_jaime_bouton_jaime_rouge">
 						Je n'aime plus
 						</div>
 					</a>
 			{% else %}
 
-			    <a href="{% url 'add_favorite' video.id %}" >
-						<div class="titre_et_vues_vues_et_jaime_bouton_jaime" style="background-color: #50b649;">
+			    <a href="{% url 'add_favorite' video.id %}" class="lien_jaime_vert">
+						<div class="titre_et_vues_vues_et_jaime_bouton_jaime_vert">
 							J'aime
 						</div>
 					</a>
