--- a/videos/templates/proj.html
+++ b/videos/templates/proj.html
@@ -15,7 +15,7 @@
 var video = document.getElementById('video');
 var source = document.createElement('source');
 video.appendChild(source);
-var titre = document.getElementById('titre_video');
+//var titre = document.getElementById('titre_video');
 var current = 0;
 
 var playlist = []
